# orbdocs

./: .gitignore  Cargo.toml  Makefile.toml  README.md  dom.md
resources/: index.html
resources/styles/: styles.css
src/: lib.rs  untitled.rs
src/blocks/: global.rs  legal.rs  media.rs  mod.rs  text.rs
src/editor/: mod.rs  shell.rs
src/parser/: html.rs
src/tags/: alignment.rs  blocks.rs  header.rs  mod.rs  text.rs
