[package]
name = "orbdocs"
version = "0.1.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
description = "Simple uniform response and error codes backed by enums"
homepage = "https://github.com/charleschege/orbdocs"
repository = "https://github.com/charleschege/orbdocs"
keywords = ["editor", "wasm"]
categories = ["wasm", "editor"]
readme = "README.md"
license = "Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
yew = "0.17.3"
yew-router = "0.14.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
