[package]
name = "orbdocs"
version = "0.1.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
edition = "2018"
description = "Simple uniform response and error codes backed by enums"
homepage = "https://github.com/charleschege/orbdocs"
repository = "https://github.com/charleschege/orbdocs"
keywords = ["editor", "wasm"]
categories = ["wasm", "editor"]
readme = "README.md"
license = "Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.34"
#serde = { version = "1.0.115", features = ["derive"] }
#serde_json = "1.0.57"
wasm-bindgen = "0.2.68"
#wasm-bindgen-futures = "0.4.18"
js-sys = "0.3.45"
htmlstream = "0.1.3"
#wasm-logger = "0.2.0"
#log = "0.4.11"
#html-index = "0.3.4"
wee_alloc = "0.4.5"
console_log = "0.2.0"
log = "0.4.11"
console_error_panic_hook = "0.1.6"
mogwai = "0.4.0"

[dependencies.web-sys]
version = "0.3.45"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlDocument",
  "Node",
  "Window",
  "MutationObserver",
  "MutationObserverInit",
  "console",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "CssStyleDeclaration",
  "HtmlCollection",
  "Selection",
  "CharacterData",
  "Event",
  "EventTarget",
  "Node",
  "NodeList",
  "Performance",
  "Text",
  "Window",
  "Range",
]
